# arcosparse

./: .flake8  .gitignore  README.md  contribution.md  makefile  pyproject.toml  pyrightconfig.json  test_script.py
.github/workflows/: check_format.yml  release.yml  tests.yaml
src/: chunk_calculator.py  downloader.py  main.py  models.py  test_script.py  utils.py
src/arcosparse/: __init__.py  chunk_calculator.py  chunk_selector.py  downloader.py  main.py  models.py  sessions.py  subset.py  subsetter.py  utils.py
src/sparsub/: chunk_calculator.py  downloader.py  main.py  models.py
tests/: .test.env.template  test_choosing_arco_asset.py  test_chunk_calculator.py  test_chunk_selector.py  test_deprecations.py  test_downloader.py  test_get_entities.py  test_get_metadata.py  test_platform_subsetting.py  test_subset.py  test_utility_functions.py
tests/__snapshots__/: test_get_entities.ambr  test_get_metadata.ambr
