[project]
name = "sparse-subsetter"
version = "0.1.0"
description = "Helper to sdownload and subset sparse data from Copernicus Marine Services"
authors = [{name = "renaudjester",  email = "renaud.jester@lobelia.earth"}, {name = "Lobelia", email = "developer@lobelia.earth"}]
readme = "README.md"
requires-python = ">=3.9,<4.0"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"
pandas = "^2.2.3"
pystac = ">=1.8.3"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
